--- a/src/main/resources/static/style.css
+++ b/src/main/resources/static/style.css
@@ -248,3 +248,86 @@
     margin-top: 170px;
     z-index: 7;
 }
+nav {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 1rem;
+    background-color: #fff;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+}
+
+.nav-links li a {
+    font-size: 1.5rem;
+    font-weight: bold;
+    color:  rgb(116,116,116);
+    text-decoration: none;
+}
+.navbar-brand{
+    padding-right: 50px;
+}
+.logo a{
+    padding-left: 50px;
+    font-weight: 900;
+    font-size: 2rem;
+    color: #333;
+}
+.row{
+    display: flex;
+    justify-content: space-between
+}
+.photo{
+    text-align: right;
+}
+.info{
+    text-align: left;
+    padding-top: 200px;
+}
+footer{
+    background-color: #363738;
+    color: #fff;
+}
+.footer{
+    background:#000;
+    padding:30px 0px;
+    font-family: 'Play', sans-serif;
+    text-align:center;
+}
+
+.footer .row{
+    width:100%;
+    margin:1% 0%;
+    padding:0.6% 0%;
+    color:gray;
+    font-size:0.8em;
+}
+
+.footer .row a{
+    text-decoration:none;
+    color:gray;
+    transition:0.5s;
+    display: flex;
+    margin: 0 auto;
+
+}
+
+.footer .row a:hover{
+    color:#fff;
+}
+
+.footer .row ul{
+    width:100%;
+
+}
+
+.footer .row ul li{
+    display:inline-block;
+    margin:0px 30px;
+}
+
+.footer .row a i{
+    font-size:2em;
+    margin:0% 1%;
+}
+
+
