--- a/src/main/resources/templates/auth/login.html
+++ b/src/main/resources/templates/auth/login.html
@@ -150,7 +150,7 @@
             display: inline-block;
             width: 35px;
             height: 35px;
-            background: url('static/img/view.png') 0 0 no-repeat;
+            background: url('/img/view.png') 0 0 no-repeat;
             transition: 0.3s;
 
         }
